CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)

PROJECT(jet CXX C)


#if(POLICY CMP0043)
#  # http://www.cmake.org/cmake/help/v3.0/policy/CMP0043.html
#  cmake_policy(SET CMP0043 OLD)
#endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
Set(CMAKE_BUILD_TYPE Release)

SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
  MESSAGE(STATUS "Using OpenMP parallelization")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ELSE()
  MESSAGE(STATUS "Not using OpenMP parallelization")
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY})
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(cmd)
